<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:weightSum="5"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background">
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:src="@drawable/logofpt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:textColor="#3d3d38"
            android:textSize="50sp"
            android:gravity="center"
            android:text="@string/easyMath"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/btnBacNhat"
            android:layout_weight="1"
            android:text="@string/bac_nhat"
            android:textSize="18sp"
            android:drawableTop="@drawable/match1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#ecebe7"
            android:padding="5dp"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/btnBacHai"
            android:layout_weight="1"
            android:text="@string/bac_hai"
            android:textSize="18sp"
            android:drawableTop="@drawable/bachai"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#ecebe7"
            android:padding="5dp"
            android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/btnMaxMin"
            android:layout_weight="1"
            android:text="@string/max_min"
            android:textSize="18sp"
            android:drawableTop="@drawable/minmax"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#ecebe7"
            android:padding="5dp"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/btnNguyenTo"
            android:layout_weight="1"
            android:text="@string/nguyen_to"
            android:textSize="18sp"
            android:drawableTop="@drawable/nguyento"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#ecebe7"
            android:padding="5dp"
            android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/btnSum"
            android:layout_weight="1"
            android:text="@string/sum"
            android:textSize="18sp"
            android:drawableTop="@drawable/sum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#ecebe7"
            android:padding="5dp"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/btnUocBoi"
            android:layout_weight="1"
            android:text="@string/uoc_boi_chung"
            android:textSize="18sp"
            android:drawableTop="@drawable/uocchung"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#ecebe7"
            android:padding="5dp"
            android:layout_margin="5dp"/>
    </LinearLayout>

</LinearLayout>