<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background2">


    <TextView
        android:textSize="20sp"
        android:id="@+id/txtreturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/btnreturn"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp" />

    <TextView
        android:textSize="30sp"
        android:id="@+id/t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum"
        android:layout_alignTop="@+id/txtreturn"
        android:layout_centerHorizontal="true" />

    <EditText
        android:hint="@string/numn"
        android:id="@+id/edtnuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/t"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnKetQua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTim"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/edtnuma"
        android:layout_centerHorizontal="true" />

    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/txtKetQua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:text=""
        android:layout_below="@+id/btnKetQua"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>